# pw-2325-backend-i

1_20032024/: two_sum.py
2_21032024/: calctest.py  circle.py  circlecalc.py
4_01042024/: exerc  pyproject.toml
4_01042024/src/: main.py  shoppinglist.py
aula 5/: README.md  bot.py  pyproject.toml
aula11/: Dockerfile  pyproject.toml
aula11/.devcontainer/: devcontainer.json  docker-compose.yml
aula11/catalog/: main.py  models.py  run.py
aula11/catalog/routes/: products.py
aula12/: Dockerfile  docker-compose.yaml  pyproject.toml
aula12/api/: clients.py
aula12/api/routes/: products.py
aula12/api/scripts/: fakedb.py
aula13/: Dockerfile  db.json  docker-compose.yaml  pyproject.toml
aula13/api/: clients.py  main.py  models.py  run.py
aula13/api/routes/: products.py
aula14/: Dockerfile  docker-compose.yaml  pyproject.toml
aula14/aula14/: settings.py
aula14/posts/migrations/: 0001_initial.py
aula15/: db.sqlite3
aula15/aula15/: settings.py  urls.py
aula15/posts/: models.py
aula15/posts/migrations/: 0001_initial.py
aula15/products/: admin.py  models.py  urls.py  views.py
aula15/products/migrations/: 0001_initial.py  0002_alter_product_name.py  0003_alter_product_options_remove_product_sku_and_more.py
aula15/products/templates/products/: product_list.html
aula16/: db.sqlite3  docker-compose.yaml  pyproject.toml
aula16/aula16/: asgi.py  settings.py  urls.py  wsgi.py
aula16/posts/: admin.py  forms.py  models.py  urls.py  views.py
aula16/posts/migrations/: 0001_initial.py
aula16/posts/templates/posts/: login.html  post_detail.html  post_list.html
aula16/products/: urls.py  views.py
aula16/products/migrations/: 0001_initial.py
aula16/products/templates/products/: product_detail.html  product_list.html
aula17/: Dockerfile  db.sqlite3  docker-compose.yaml  pyproject.toml
aula17/aula17/: settings.py  urls.py
aula17/aula17/static/: style.css
aula17/aula17/templates/: base.html  index.html
aula17/posts/: urls.py  views.py
aula17/posts/templates/posts/: post_detail.html  post_list.html
aula17/products/: models.py
aula17/products/migrations/: 0002_alter_product_name.py
aula17/products/templates/products/: product_detail.html  product_list.html
aula18/API/: main.py  pyproject.toml  run.py  trivia.json
aula18/API/routes/: trivia.py
aula18/CLI/: cli.py  pyproject.toml
aula3/: circle.py  logic.py  rectangle.py  sleeper.py  test_.py  test_circle.py  test_rectangle.py
aula4/: Makefile  README.md  list.txt  name.py  pyproject.toml
aula4/src/: shoppinglist.py  test_cli.py
aula6/: Docker-compose.yaml  Dockerfile  Makefile  README.md  pyproject.toml
aula6/eticbot/: bot.py
aula7/: Dockerfile  Makefile  docker-compose.yaml  ollama.dockerfile  pyproject.toml
aula7/eticgpt/: bot.py  clients.py
aula7/llmbot/: bot.py  clients.py  models.py  run.py
