[tool.poetry]
name = "aula12"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^24.8.0"
uvicorn = "^0.29.0"
fastapi = "^0.110.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
