[tool.poetry]
name = "cli"
version = "0.1.0"
description = "CLI project"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "src/shoppinglist.py"}
]
[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"

[tool.poetry.scripts]
slist = "src.shoppinglist:slist"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
