[tool.poetry]
name = "llmbot"
version = "0.1.0"
description = "LLM bot python"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "llmbot/*.py"}
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
py-cord = "^2.5.0"
requests = "^2.31.0"
pydantic = "^2.6.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.5"
black = "^24.3.0"

[tool.poetry.scripts]
llm = "llmbot.run:llm"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
