[tool.poetry]
name = "cli"
version = "0.1.0"
description = "Strong password generator"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages= [
    {include = "*.py"}
]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"

[tool.poetry.scripts]
passgen = "cli:PassGen"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
